Fix image display on smaller screens

--- a/gt.css
+++ b/gt.css
@@ -118,6 +118,22 @@
     }
 }
 
+@media (max-width:400px){
+    .gt-smaller-on-small{
+        transform: scale(0.6);
+        margin-left: -5em;
+        overflow: auto;
+    }
+}
+
+@media (min-width:400px) and (max-width:600px){
+    .gt-smaller-on-small{
+        transform: scale(0.7);
+        margin-left: -3em;
+        overflow: auto;
+    }
+}
+
 .gt-bottom-line{
     border-bottom: 1px solid #f1f1f1;
 }
